<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Address">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/direccion"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/orange_200"
            android:textSize="25dp"
            android:textStyle="bold" />

        <View
            android:layout_width="250dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/orange_200" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="21dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_marginTop="100dp"
        tools:ignore="MissingConstraints">
        <LinearLayout
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:orientation="vertical"
            android:padding="25dp"
            >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion1"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:lineSpacingExtra="8sp"/>

            <TextView
                android:id="@+id/textView8"
                android:layout_width="360dp"
                android:layout_height="wrap_content"
                android:text="@string/direccionejem"
                android:typeface="normal"
                android:textSize="17sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/address2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="25dp"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/direccion2"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:lineSpacingExtra="8sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="354dp"
                android:layout_height="wrap_content"
                android:text="@string/direccionejem2"
                android:textSize="17sp" />

        </LinearLayout>

        <Button
            android:id="@+id/iredit"
            android:layout_width="274dp"
            android:layout_height="64dp"
            android:layout_gravity="end"
            android:onClick="editaddres"
            android:text="@string/EditarDireccion" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>