<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PayCart">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/Tarjetas"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:textColor="@color/orange_200"
            android:textSize="25dp"
            android:textStyle="bold" />

        <View
            android:layout_width="250dp"
            android:layout_height="5dp"
            android:layout_gravity="center"
            android:background="@color/orange_200" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="100dp">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="250dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/MensajeTarjetas"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/radioButton2"
                android:layout_width="353dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Jose Lopez XXXX XXXX XXXX 8743"
                android:textSize="20sp" />

            <RadioButton
                android:id="@+id/radioButton"
                android:layout_width="352dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:hint="Jose Lopez XXXX XXXX XXXX 3453"
                android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/payfinal"
            android:layout_width="189dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="pay"
            android:text="@string/pagar" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>